@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.3.2-beta2
-DOS2UNIX_VERSION_SHORT = 732b2
-DOS2UNIX_DATE = 2015-10-25
+DOS2UNIX_VERSION = 7.3.2-beta3
+DOS2UNIX_VERSION_SHORT = 732b3
+DOS2UNIX_DATE = 2015-11-05
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
